5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1752_3093.log
== TEST (2019-05-16 17:32:02) 
-- CODE:
n=V
v=3
e=1
d=0
while(n!="X"):
	n=input("digite: ")
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
print(v)
print(e)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=V
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:08) 
-- CODE:
n=V
v=3
e=1
d=0
while(n!="X"):
	n=input("digite: ")
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
print(v)
print(e)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=V
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:22) 
-- CODE:
n=V
v=3
e=1
d=0
while(n!="X"):
	n=input("digite: ")
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
print(v)
print(e)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=V
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:39) 
-- CODE:
n=V
v=3
e=1
d=0
while(n!="X"):
	n=input("digite: ")
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
print(v)
print(e)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=V
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:59) 
-- CODE:
n="V"
v=3
e=1
d=0
while(n!="X"):
	n=input("digite: ")
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
print(v)
print(e)
	

-- OUTPUT:
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:17) 
-- CODE:
n="V"
v=3
e=1
d=0
while(n!="X"):
	n=input("digite: ").upper()
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
print(v)
print(e)
	

-- OUTPUT:
9
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:38) 
-- CODE:
n="V"
v=3
e=1
d=0
while(n!="X"):
	n=input("digite: ").upper()
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
	
print(v)
print(e)
-- OUTPUT:
9
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:38:39) 
-- CODE:
n="V"
v=0
e=0
d=0
while(n!="X"):
	n=input("digite: ").upper()
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
	
print(v)
print(e)
-- OUTPUT:
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:28) 
-- CODE:
n="V"
v=0
e=0
d=0
while(n!="X"):
	n=input("digite: ").upper()
	if(n=="V"):
		v=v + 3
	if(n=="E"):
		e=e+1
	
print(v)
print(e)
-- EXECUTION TIME:
0.166378
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
6
2
---- user output:
6
2
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
C
X
---- correct output:
3
1
---- user output:
3
1
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
12
0
---- user output:
12
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
